# ray-tracing-in-one-weekend

./: Cargo.nix  Cargo.toml  README.md  flake.nix
src/: axis.rs  bounds.rs  bvh.rs  camera.rs  cli.rs  color.rs  hit.rs  hittable.rs  image.rs  interval.rs  lib.rs  main.rs  material.rs  object.rs  ray.rs  sphere.rs  texture.rs  vec3.rs
