[package]
name = "ray-tracing-in-one-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.6", features = ["derive"] }
crossbeam-channel = "0.5"
num_cpus = "1.13.1"
rand = "0.8.4"
